force-app/main/default/objects/Survey__c/fields/Back_Label__c.field-meta.xml
<CustomField>
    <fullName>Back_Label__c</fullName>
    <description
  >Label of the Back button in the runner. Fallback: component default.</description>
    <label>Back Button Label</label>
    <length>40</length>
    <type>Text</type>
</CustomField>