force-app/main/default/objects/Survey__c/fields/Closing_Message__c.field-meta.xml
<CustomField>
    <fullName>Closing_Message__c</fullName>
    <description
  >Message shown on the final screen after submission. Fallback: component default.</description>
    <label>Closing Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>