force-app/main/default/objects/Survey__c/fields/Display_Title__c.field-meta.xml
<CustomField>
    <fullName>Display_Title__c</fullName>
    <description
  >Title shown in the runner header. Fallback: the Survey Name.</description>
    <label>Display Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>