force-app/main/default/objects/Survey__c/fields/Intro_Text__c.field-meta.xml
<CustomField>
    <fullName>Intro_Text__c</fullName>
    <description
  >Introductory paragraph shown under the title in the runner. Fallback: Description__c.</description>
    <label>Intro Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>