force-app/main/default/objects/Survey__c/fields/Next_Label__c.field-meta.xml
<CustomField>
    <fullName>Next_Label__c</fullName>
    <description
  >Label of the Next button in the runner. Fallback: component default.</description>
    <label>Next Button Label</label>
    <length>40</length>
    <type>Text</type>
</CustomField>