force-app/main/default/objects/Survey__c/fields/Start_Question__c.field-meta.xml
<CustomField>
    <fullName>Start_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The starting node of the survey graph. Mandatory for an Active survey (enforced by validation rule and at runtime).</description>
    <label>Start Question</label>
    <referenceTo>Question__c</referenceTo>
    <relationshipLabel>Surveys Starting Here</relationshipLabel>
    <relationshipName>Surveys_Starting_Here</relationshipName>
    <type>Lookup</type>
</CustomField>