force-app/main/default/objects/Survey__c/fields/Submit_Label__c.field-meta.xml
<CustomField>
    <fullName>Submit_Label__c</fullName>
    <description
  >Label of the Submit button in the runner. Fallback: component default.</description>
    <label>Submit Button Label</label>
    <length>40</length>
    <type>Text</type>
</CustomField>