force-app/main/default/objects/Survey__c/fields/Theme__c.field-meta.xml
<CustomField>
    <fullName>Theme__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
  >Aesthetic theme of this survey. One theme can be shared by many surveys; frame texts stay on the Survey. Empty = the runner falls back to its built-in default styling.</description>
    <label>Theme</label>
    <referenceTo>Survey_Theme__c</referenceTo>
    <relationshipLabel>Surveys</relationshipLabel>
    <relationshipName>Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>