force-app/main/default/objects/Survey__c/fields/Theme_Static_Resource__c.field-meta.xml
<CustomField>
    <fullName>Theme_Static_Resource__c</fullName>
    <description>API name of the StaticResource whose body is a JSON theme. Explicit reference, not a name-convention, so the same theme can be reused across surveys.</description>
    <label>Theme Static Resource</label>
    <length>255</length>
    <type>Text</type>
</CustomField>