force-app/main/default/objects/Survey__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <description>Informational version label snapshotted onto every Question_Response at submission time.</description>
    <label>Version</label>
    <length>50</length>
    <type>Text</type>
</CustomField>